--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
-spring.datasource.url=jdbc:sqlserver://localhost:55754;database=JDBCTest
+spring.datasource.url=jdbc:sqlserver://localhost:55754;database=AccountingNoteJava
 #jdbc:mysql://52.68.62.55:3306/user01?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Tokyo&useSSL=true
 spring.datasource.username=sa
 spring.datasource.password=Nocturne10512
 #spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
+spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.suffix=.html
+# spring.mvc.static-path-pattern=/resources/**
+# spring.web.resources.static-locations=file:/resources
