--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,9 @@
+# Database information
 spring.datasource.url=jdbc:sqlserver://localhost:55754;database=AccountingNoteJava
 spring.datasource.username=sa
 spring.datasource.password=Nocturne10512
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 spring.jpa.properties.hibernate.hbm2ddl.auto=update
 spring.jpa.show-sql=true
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.suffix=.html
-# spring.mvc.static-path-pattern=/resources/**
-# spring.web.resources.static-locations=file:/resources
